# nostrmart

./: .env.example  .gitignore  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  README.md  app.py  blossom_client.py  index.html  issue-profile.md  models.py  nostr_auth.py  plan.md  profile-test.html  profile.html  pyproject.toml  replit.md  requirements.txt  routes.py  todo.md  utils.py  vercel.json
api/: health.py  hello.py  index.py  listings.py  media.py  nostr-event.py  nostr-events.py  nostr.py  nostrmart.py  purchases.py  reviews.py  test-listings.py  test.py
api/health/: index.py
api/media/: index.py
api/nostr/: index.py
app/adapters/: __init__.py  supabase_client.py
app/core/: __init__.py  config.py  logging.py  response.py
app/models/: listings.py  nostr.py
app/services/: listings_service.py  media_service.py  nostr_service.py
app/utils/: __init__.py
css/base/: typography.css
css/components/: buttons.css  navigation.css
css/pages/: profile.css
css/utilities/: animations.css  spacing.css
docs/: MANUAL_VALIDATION.md
docs/adr/: 0001-serverless-migration.md
js/: app.js
js/components/: Modal.js
js/pages/: Profile.js
js/services/: api.js  storage.js
migrations/: 001_init.sql  002_listings.sql
profile/: index.html
public/: index.html  profile.html
public/css/base/: colors.css  reset.css
public/js/: app.js
scripts/: verify_local.sh
static/css/: style.css
static/js/: app.js  nostr-auth.js  nostr-tools.min.js
templates/: base.html  create_listing.html  index.html  listing_detail.html  login.html  profile.html  search.html
(+10 files in other folders)
