[project]
name = "nostrmart"
version = "0.1.0"
description = "Decentralized marketplace built on Nostr protocol"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = ["ruff>=0.5.0", "black>=24.3.0"]
legacy = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


